--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "keycloak-js": "^26.2.2",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
   },
