fix verify route

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,37 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    error_page 404 /index.html;
+
     location /api/ {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Handle /verify-access backend endpoint (not /api/verify-access)
+    location /verify-access {
+        error_page 418 = @verify_post;
+        if ($request_method = POST) {
+            return 418;
+        }
+        try_files $uri $uri/ /index.html;
+    }
+
+    location @verify_post {
+        rewrite ^ /api/locks/verify-access break;
+        proxy_pass http://backend:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /keycloak/ {
+        proxy_pass http://keycloak:8080;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
